# backend/app/modules/security/security.controller.ts
@@ -1,6 +1,7 @@
 import {SecurityService} from './security.service';
 import {LoginParameters} from '../../models/models';
 import {errorHandler} from '../../../core/core.controller';
+import {User} from './user.model';
 
 const securityService: SecurityService = new SecurityService();
 
@@ -19,9 +20,21 @@ export function loginHandler(req, res, next) {
         }, err => errorHandler(res, err));
 }
 
+export function logoutHandler(req, res, next) {
+    const tokens = {
+        refresh: req.cookies.REFRESH || null,
+        access: req.cookies.BEARER || null
+    };
+
+    securityService.logout(res, tokens)
+        .subscribe(() => {
+            res.send();
+        }, err => errorHandler(res, err));
+}
+
 export function userNewHandler(req, res, next) {
     const content: any = req.swagger.params['content'].value;
-    securityService.createUser(content)
+    User.createUser(content)
         .subscribe(() => {
             return res.status(200).send();
         }, err => errorHandler(res, err));
